syntax = "proto3";

option java_multiple_files = true;
package grpc.helloworld;

message Person {
  string first_name = 1;
  string last_name = 2;
}

message Ok {
}

service HelloWorldStreamingService {
  rpc sayHello (stream Person) returns (Ok);
}
